--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <form method="post">
-        <select name="cars" size="4" multiple>
-          <option value="1">Volvo</option>
-          <option value="2">Saab</option>
-          <option value="3">Fiat</option>
-          <option value="4">Audi</option>
-        </select>
-        <button type="submit">Ок</button>
-    </form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    </head>
+    <body>
+        <select name="category" size="4" multiple style = "font-size: 20px">
+            <option value="1">Volvo</option>
+            <option value="2">Saab</option>
+            <option value="3">Fiat</option>
+            <option value="4">Audi</option>
+        </select><br>
+
+        <button id="my_button" style = "font-size: 20px">Ок</button><br>
+
+        <canvas id="statusChart" width="500" height="500"></canvas>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
+    </body>
 </html>
