--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,3 +22,39 @@ canvas {
     display: block;
     width: 450px;
 }
+
+body {
+    margin: 0;
+}
+
+#sidebar, #content {
+    position: absolute;
+}
+
+#sidebar, #content {
+    overflow: auto;
+    padding: 10px;
+}
+
+#header {
+    height: 80px; /* Высота слоя */
+    background: #FEDFC0; border-bottom: 2px solid #7B5427;
+}
+
+#header h1
+{
+    padding: 20px;
+    margin: 0;
+}
+
+#sidebar {
+    width: 400px; background: #ECF5E4; border-right: 1px solid #231F20;
+    top: 82px; /* Расстояние от верхнего края */
+    bottom: 0; /* Расстояние снизу  */
+}
+
+#content {
+ top: 82px; /* Расстояние от верхнего края */
+ left: 420px; /* Расстояние от левого края */
+ bottom: 0; right: 0;
+}
