--- a/app/templates/documents_list.html
+++ b/app/templates/documents_list.html
@@ -6,7 +6,6 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Документы</title>
-        <link rel="stylesheet" href="../static/css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
@@ -77,15 +76,17 @@
                         <li>{{ doc.id }}</li>
                         <li class='list-group-item'>
                             <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">{{ doc.id }}</h5>
+                                <h5 class="mb-1">
+                                    <a href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
+                                        {{ doc.id }}
+                                    </a>
+                                </h5>
                             </div>
                             <p class="mb-1">{{ doc.req_detail }}</p>
                             <p class="mb-1">{{ doc.cond_detail }}</p>
                         </li>
                     {% endfor %}
                 </ul>
-                <div class="container" style="margin-top: 60px">
-                </div> 
             </div>
         </div>
 
