added overflow of selects

--- a/app/templates/detail_document.html
+++ b/app/templates/detail_document.html
@@ -11,8 +11,8 @@
     </head>
     <body>
         <div id="header"><h1>
-            <a href="index.html" class="btn btn-primary btn-lg">Статистика</a>
-            <a href="documentList.html" class="btn btn-primary btn-lg">Поиск Дела</a><br>
+            <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">Статистика</a>
+            <a href="{{ url_for('documents_page') }}" class="btn btn-primary btn-lg">Поиск Дела</a><br>
         </h1></div>
 
         <div id="rightsidebar">
