--- a/app/templates/documents_list.html
+++ b/app/templates/documents_list.html
@@ -14,18 +14,21 @@
         
         <div id="header"><h1>
             <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">Статистика</a>
-            <a href="documentList.html" class="btn btn-primary btn-lg">Поиск Дела</a><br>
+            <a href="{{ url_for('documents_page') }}" class="btn btn-primary btn-lg">Поиск Дела</a><br>
         </h1></div>
 
         <div id="sidebar">
             <form method="post" action="{{ url_for('documents_page') }}">
                 <div id="select-block">
                     <p><b>Категория</b></p>
-                    <select id="select-category" name="cat_id" class="form-select" size="15" aria-label="size 15 select example">
+                    <select id="select-category" name="cat_ids" class="form-select" size="15" aria-label="size 15 select example" multiple>
                         {% for category in categories %}
                             <option value="{{ category.id }}">{{ category.name }}</option>
                         {% endfor %}
                     </select><br>
+                    <button id="clear_selected_category" class="btn btn-info index" type="button">
+                        Очистить выбор
+                    </button>
                 </div>
 
                 <div id="select-block">
@@ -35,6 +38,9 @@
                             <option value="{{ req.id }}">{{ req.name }}</option>
                         {% endfor %}
                     </select><br>
+                    <button class="btn btn-info index" onclick="$('#select-req').prop('selectedIndex', -1);" type="button">
+                        Очистить выбор
+                    </button>
                 </div>
 
                 <div id="select-block">
@@ -44,15 +50,21 @@
                             <option value="{{ cond.id }}">{{ cond.name }}</option>
                         {% endfor %}
                     </select><br>
+                    <button class="btn btn-info index" onclick="$('#select-cond').prop('selectedIndex', -1);" type="button" >
+                        Очистить выбор
+                    </button>
                 </div>
 
                 <div id="select-block">
                     <p><b>Решение</b></p>
-                    <select id="select-solution" class="form-select" size="3" aria-label="size 3 select example">
+                    <select id="select-solution" name="sol_id" class="form-select" size="3" aria-label="size 3 select example">
                         {% for solution in solutions %}
                             <option value="{{ solution.id }}">{{ solution.name.capitalize() }}</option>
                         {% endfor %}
                     </select><br>
+                    <button class="btn btn-info index" onclick="$('#select-solution').prop('selectedIndex', -1);" type="button" >
+                        Очистить выбор
+                    </button>
                 </div>
 
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
@@ -90,5 +102,6 @@
             </div>
         </div>
 
+        <script type="text/javascript" src="{{ url_for('static', filename='js/fill_selects.js') }}"></script>
     </body>
 </html>
