--- a/app/templates/detail_document.html
+++ b/app/templates/detail_document.html
@@ -1,84 +1,78 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Документ</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    </head>
-    <body>
-        <div id="header"><h1>
+{% extends 'base.html' %}
+
+{% block title %}Документ{% endblock %}
+
+{% block body %}
+    <div id="header">
+        <h1>
             <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">Статистика</a>
             <a href="{{ url_for('documents_page') }}" class="btn btn-primary btn-lg">Поиск Дела</a><br>
-        </h1></div>
+        </h1>
+    </div>
 
-        <div id="rightsidebar">
-            <ul class="nav nav-pills nav-fill flex-column">
-                {% for doc in documents %}
-                <li class="nav-item">
-                    {% if doc.id == cur_doc.id and doc.instance == 1 %}
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
-                            Первая инстанция
-                        </a>
-                    {% endif %}
+    <div id="rightsidebar">
+        <ul class="nav nav-pills nav-fill flex-column">
+            {% for doc in documents %}
+            <li class="nav-item">
+                {% if doc.id == cur_doc.id and doc.instance == 1 %}
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
+                        Первая инстанция
+                    </a>
+                {% endif %}
 
-                    {% if doc.id == cur_doc.id and doc.instance == 2 %}
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
-                            Апелляция
-                        </a>
-                    {% endif %}
+                {% if doc.id == cur_doc.id and doc.instance == 2 %}
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
+                        Апелляция
+                    </a>
+                {% endif %}
 
-                    {% if doc.id == cur_doc.id and doc.instance == 3 %}
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
-                            Кассация
-                        </a>
-                    {% endif %}
+                {% if doc.id == cur_doc.id and doc.instance == 3 %}
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
+                        Кассация
+                    </a>
+                {% endif %}
 
-                    {% if doc.id == cur_doc.id and doc.instance == 4 %}
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
-                            Вторая кассация/Надзор
-                        </a>
-                    {% endif %}
-
-                    {% if doc.id != cur_doc.id and doc.instance == 1 %}
-                        <a class="nav-link" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
-                            Первая инстанция
-                        </a>
-                    {% endif %}
-
-                    {% if doc.id != cur_doc.id and doc.instance == 2 %}
-                        <a class="nav-link" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
-                            Апелляция
-                        </a>
-                    {% endif %}
-
-                    {% if doc.id != cur_doc.id and doc.instance == 3 %}
-                        <a class="nav-link" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
-                            Кассация
-                        </a>
-                    {% endif %}
-
-                    {% if doc.id != cur_doc.id and doc.instance == 4 %}
-                    <a class="nav-link" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
+                {% if doc.id == cur_doc.id and doc.instance == 4 %}
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
                         Вторая кассация/Надзор
                     </a>
-                    {% endif %}
-                </li>
-                {% endfor %}
-            </ul>
+                {% endif %}
 
-            <p><b>Категория дела: </b>{{ category.name }}</p>
-            <p><b>Требования по делу: </b>{{ cur_doc.req_detail }}</p>
-            <p><b>Обстоятельства по делу: </b>{{ cur_doc.cond_detail }}</p>
-            <p><b>Решение по делу: </b>{{ deal_solution }}</p>
-            <p><b>Решение по данной инстанции: </b>{{ doc_solution }}</p>
-        </div>
+                {% if doc.id != cur_doc.id and doc.instance == 1 %}
+                    <a class="nav-link" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
+                        Первая инстанция
+                    </a>
+                {% endif %}
 
-        <div id="leftcontent">
-            {{ text }}
-        </div>
-    </body>
-</html>
+                {% if doc.id != cur_doc.id and doc.instance == 2 %}
+                    <a class="nav-link" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
+                        Апелляция
+                    </a>
+                {% endif %}
+
+                {% if doc.id != cur_doc.id and doc.instance == 3 %}
+                    <a class="nav-link" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
+                        Кассация
+                    </a>
+                {% endif %}
+
+                {% if doc.id != cur_doc.id and doc.instance == 4 %}
+                <a class="nav-link" aria-current="page" href="{{ url_for('document_page', doc_id=doc.id.replace('/', '_')) }}">
+                    Вторая кассация/Надзор
+                </a>
+                {% endif %}
+            </li>
+            {% endfor %}
+        </ul>
+
+        <p><b>Категория дела: </b>{{ category.name }}</p>
+        <p><b>Требования по делу: </b>{{ cur_doc.req_detail }}</p>
+        <p><b>Обстоятельства по делу: </b>{{ cur_doc.cond_detail }}</p>
+        <p><b>Решение по делу: </b>{{ deal_solution }}</p>
+        <p><b>Решение по данной инстанции: </b>{{ doc_solution }}</p>
+    </div>
+
+    <div id="leftcontent">
+        {{ text }}
+    </div>
+{% endblock %}
