--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -4,6 +4,11 @@
 {% block javascript %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
+    <script type="text/javascript">
+        {% if data %}
+            let data = {{ data|tojson }}
+        {% endif %}
+    </script>
 {% endblock %}
 
 {% block body %}
