--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -21,7 +21,7 @@ html {
     margin-right: 1rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    border: 1px solid #000000;
+    border: 1px solid #E0DDDD;
 }
 
 #containerBar {
@@ -44,7 +44,7 @@ html {
     margin-right: 1rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    border: 1px solid #000000;
+    border: 1px solid #E0DDDD;
 }
 
 #select-block {
@@ -52,6 +52,8 @@ html {
     width: 22rem;
 
 }
+
+
 
 .index {
     margin: 0 auto;
@@ -67,21 +69,25 @@ body {
     position: absolute;
 }
 
+
+
+
 #headerName {
     width: 25rem;
     height: 3.8rem; /* Высота слоя */
-    background: #FAAAFF;
-    border-right: 1px solid #000000;
-    border-bottom: 2px solid #000000;
+    background: #FFFFFF;
+    border-right: 2px solid #E0DDDD;
+    border-bottom: 2px solid #E0DDDD;
+
 
 }
 
 #headerName h1 {
     font-family: "Codec cold",sans-serif;
     font-weight: bold;
-    font-size: 2.5rem;
+    font-size: 2,5rem;
     text-align: center;
-    background: linear-gradient(45deg, #884AB2 12%, #f5811f);
+    background: linear-gradient(45deg, #1a7431 12%, #f5811f);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     display: table;
@@ -95,8 +101,8 @@ body {
 
 #topsidebar {
     background: #FFFFFF;
-    border-right: 1px solid #000000;
-    border-bottom: 2px solid #000000;
+    border-right: 1px solid #E0DDDD;
+    border-bottom: 2px solid #E0DDDD;
     top: 0; /* Расстояние от верхнего края */
     right: 30rem;
     left: 25rem;
@@ -109,9 +115,9 @@ body {
 
 #topFindSidebar {
     background: #FFFFFF;
-    border-right: 1px solid #000000;
-    border-left: 1px solid #000000;
-    border-bottom: 2px solid #000000;
+    border-right: 2px solid #E0DDDD;
+    border-left: 1px solid #E0DDDD;
+    border-bottom: 2px solid #E0DDDD;
     top: 0px; /* Расстояние от верхнего края */
     right: 15rem;
     height: 3.8rem; /* Высота слоя */
@@ -143,8 +149,8 @@ img {
     display: flex;
     justify-content: center;
     background: #FAFFFF;
-    border-right: 1px solid #000000;
-    border-bottom: 2px solid #000000;
+    border-right: 2px solid #E0DDDD;
+    border-bottom: 2px solid #E0DDDD;
     top: 0; /* Расстояние от верхнего края */
     right: 0;
     height: 3.8rem; /* Высота слоя */
@@ -179,13 +185,13 @@ img {
     display: flex;
     justify-content: center;
     background: #FFFFFF;
-    border-right: 1px solid #000000;
-    border-left: 3px solid #000000;
-    border-bottom: 1px solid #000000;
+    border-right: 2px solid #E0DDDD;
+    border-left: 2px solid #E0DDDD;
     top: 3.8rem; /* Расстояние от верхнего края */
     right: 0px;
     height: 32rem; /* Высота слоя */
     width: 25rem;
+    box-shadow: -8px 0px 15px -9px rgba(0,0,0,0.5);
 }
 
 
@@ -203,13 +209,10 @@ img {
     display: flex;
     justify-content: center;
     background: #F2F3F3;
-    border-right: 3px solid #000000;
-    border-left: 3px solid #000000;
-    border-bottom: 3px solid #000000;
     top: 35.8rem; /* Расстояние от верхнего края */
     right: 0;
     bottom: 0;
-    width: 25rem;
+    width: 25.5rem;
 }
 
 
@@ -223,10 +226,11 @@ img {
     display: flex;
     justify-content: center;
     width: 25rem;
-    background: linear-gradient(#884AB2, #FF930A);
-    border-right: 1px solid #000000;
+    background: linear-gradient(#FFEEE6, #fefae0);
+    border-right: 2px solid #E0DDDD;
     top: 3.8rem; /* Расстояние от верхнего края */
     bottom: 0; /* Расстояние снизу  */
+    box-shadow: 8px 0px 15px -9px rgba(0,0,0,0.5);
 }
 
 
@@ -235,11 +239,12 @@ img {
 #rightsidebar {
     vertical-align: middle;
     width: 30rem;
-    background: linear-gradient(#884AB2 50%, #FF930A);
-    border-left: 1px solid #000000;
+    background: linear-gradient(#FFEEE6, #fefae0);
+    border-left: 1px solid #E0DDDD;
     top: 3.8rem; /* Расстояние от верхнего края */
     right: 0;
     bottom: 0;
+    box-shadow: -8px 0px 15px -9px rgba(0,0,0,0.5);
 }
 
 #rightsidebar h3{
@@ -252,7 +257,7 @@ img {
     justify-content: center;
     letter-spacing: 0.025rem;
     line-height: 1;
-    color: #fff;
+    color: #4D4D4D;
     margin-left: 1.5rem;
 
 }
@@ -268,7 +273,7 @@ img {
     background: #F2F3F3;
     top: 3.8rem; /* Расстояние от верхнего края */
     bottom: 0;
-    right: 30rem;
+    right: 30.5rem;
     left: 0;
 }
 
@@ -276,12 +281,12 @@ img {
 #content {
     padding: 0.625rem;
     background: #F2F3F3;
-    border-right: 1px solid #000000;
-    border-left: 1px solid #000000;
-    border-top: 1px solid #000000;
+    border-right: 1px solid #E0DDDD;
+    border-left: 1px solid #E0DDDD;
+    border-top: 1px solid #E0DDDD;
 
     top: 3.8rem; /* Расстояние от верхнего края */
-    left: 25rem; /* Расстояние от левого края */
+    left: 25.5rem; /* Расстояние от левого края */
     bottom: 0;
     right: 0;
 }
@@ -289,9 +294,9 @@ img {
 #docContent {
     background: #F2F3F3;
     top: 3.8rem; /* Расстояние от верхнего края */
-    left: 25rem; /* Расстояние от левого края */
+    left: 25.5rem; /* Расстояние от левого края */
     bottom: 0;
-    right: 25rem;
+    right: 25.5rem;
 
 }
 
@@ -326,7 +331,7 @@ select, #sidebar, #rightsidebar, #leftcontent, #content, #docContent  {
     justify-content: center;
     letter-spacing: 0.025rem;
     line-height: 1;
-    color: #fff;
+    color: #4D4D4D;
     text-align: center;
 
 
@@ -351,7 +356,7 @@ textarea {
 .button-75 {
     width: 350px;
     align-items: center;
-    background-image: linear-gradient(135deg, #7C0089 40%, #884AB2);
+    background-image: linear-gradient(135deg, #b0f2b4 40%, #baf2e9);
     border: 0;
     border-radius: 10px;
     box-sizing: border-box;
@@ -408,12 +413,14 @@ textarea {
 
 .button-75Cancel {
     width: 350px;
+    box-shadow: 0 0 7px rgba(0,0,0,0.5);
     align-items: center;
-    background-image: linear-gradient(135deg, #495057 40%, #495057);
-    border: 0;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: 1px solid #000000;
     border-radius: 10px;
     box-sizing: border-box;
-    color: #fff;
+    color: #4D4D4D;
     cursor: pointer;
     display: flex;
     flex-direction: column;
@@ -468,7 +475,7 @@ textarea {
 .button-75Spec {
     width: 350px;
     align-items: center;
-    background-image: linear-gradient(135deg, #7C0089 40%, #884AB2);
+    background-image: linear-gradient(135deg, #1a7431 30%, #4ad66d);
     border: 0;
     border-radius: 10px;
     box-sizing: border-box;
@@ -528,7 +535,8 @@ textarea {
 .button-75details {
     width: 400px;
     align-items: center;
-    background-image: linear-gradient(135deg, #f5811f 40%, #f5811f);
+    background-image: linear-gradient(135deg, #D2660F 30%, #F4A666);
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
     border: 0;
     border-radius: 10px;
     box-sizing: border-box;
@@ -586,7 +594,7 @@ textarea {
 .button-75NonActive {
     width: 400px;
     align-items: center;
-    background-image: linear-gradient(135deg, #495057 40%, #495057);
+    background-image: linear-gradient(135deg, #6c757d 40%, #9DA3AA);
     border: 0;
     border-radius: 10px;
     box-sizing: border-box;
@@ -646,7 +654,7 @@ textarea {
 .button-75Active {
     width: 400px;
     align-items: center;
-    background-image: linear-gradient(135deg, #f5811f 40%, #f5811f);
+    background-image: linear-gradient(135deg, #1a7431 30%, #4ad66d);
     border: 0;
     border-radius: 10px;
     box-sizing: border-box;
@@ -658,6 +666,66 @@ textarea {
     font-size: 20px;
     font-weight: 700;
     height: 40px;
+    justify-content: center;
+    letter-spacing: 0.4px;
+    line-height: 1;
+    max-width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 3px;
+    text-decoration: none;
+    text-transform: uppercase;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin-bottom: 10px;
+    margin-left: 35px;
+
+}
+
+.button-75Active:active {
+  outline: 0;
+}
+
+.button-75Active:hover {
+  outline: 0;
+}
+
+.button-75Active span {
+  transition: all 200ms;
+}
+
+.button-75Active:hover span {
+  transform: scale(0.9);
+  opacity: 0.75;
+}
+
+@media screen and (max-width: 991px) {
+  .button-75Active {
+    font-size: 15px;
+    height: 50px;
+  }
+
+  .button-75Active span {
+    line-height: 50px;
+  }
+}
+
+.button-75Stat {
+    width: 400px;
+    align-items: center;
+    background-image: linear-gradient(135deg, #D2660F 30%, #F4A666);
+    border: 0;
+    border-radius: 10px;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    font-family: "Codec cold",sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    height: 50px;
     justify-content: center;
     letter-spacing: 0.4px;
     line-height: 1;
