fixed page title

--- a/app/templates/diagrams.html
+++ b/app/templates/diagrams.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Документы{% endblock %}
+{% block title %}Статистика{% endblock %}
 {% block javascript %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
     <script type="text/javascript">
