--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,7 +1,3 @@
-html {
-    font-size: 16px;
-}
-
 #containerPie {
     position: absolute;
     display: flex;
@@ -44,16 +40,9 @@ html {
     width: 22rem;
 }
 
-.index {
-    margin: 0 auto;
-    display: block;
-}
-
-body {
-    margin: 0;
-}
-
-#sidebar, #content, #leftcontent, #rightsidebar, #topsidebar, #headerName, #topFindSidebar, #topHomeSidebar, #docContent, #topStatSidebar, #topUnderStatSidebar, #topHomeStat {
+#sidebar, #content, #leftcontent, #rightsidebar,
+#topsidebar, #headerName, #topFindSidebar, #topHomeSidebar,
+#docContent, #topStatSidebar, #topUnderStatSidebar, #topHomeStat {
     position: absolute;
 }
 
@@ -112,7 +101,6 @@ body {
     font-size: 1.5625rem;
     text-align: center;
     margin: 1rem auto;
-    letter-spacing: 0.0125px;
     line-height: 1;
     max-width: 100%;
 }
@@ -165,10 +153,7 @@ body {
 #topStatSidebar canvas {
     display: block;
     padding: 0;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin: 2rem;
     vertical-align: middle
 }
 
@@ -203,7 +188,7 @@ body {
     width: 30rem;
     background: linear-gradient(#FFEEE6, #fefae0);
     border-left: 1px solid #E0DDDD;
-    top: 3.8rem; /* Расстояние от верхнего края */
+    top: 3.8rem;
     right: 0;
     bottom: 0;
     box-shadow: -8px 0 15px -9px rgba(0,0,0,0.5);
@@ -265,7 +250,6 @@ body {
     right: 2rem;
 }
 
-
 select, #sidebar, #rightsidebar, #leftcontent, #content, #docContent  {
     overflow-x: auto;
 }
@@ -301,65 +285,6 @@ textarea {
     padding-top: 1.5rem;
     padding-left: 0;
     padding-right: 1rem;
-}
-
-
-.button-75 {
-    width: 350px;
-    align-items: center;
-    background-image: linear-gradient(135deg, #b0f2b4 40%, #baf2e9);
-    border: 0;
-    border-radius: 10px;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    font-family: "Codec cold",sans-serif;
-    font-size: 20px;
-    font-weight: 700;
-    height: 54px;
-    justify-content: center;
-    letter-spacing: 0.4px;
-    line-height: 1;
-    max-width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 3px;
-    text-decoration: none;
-    text-transform: uppercase;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    margin-top: 35px;
-}
-
-.button-75:active {
-  outline: 0;
-}
-
-.button-75:hover {
-  outline: 0;
-}
-
-.button-75 span {
-  transition: all 200ms;
-}
-
-.button-75:hover span {
-  transform: scale(0.9);
-  opacity: 0.75;
-}
-
-@media screen and (max-width: 991px) {
-  .button-75 {
-    font-size: 15px;
-    height: 50px;
-  }
-
-  .button-75 span {
-    line-height: 50px;
-  }
 }
 
 .button-75Cancel {
